# tran

./: .gitignore  Cargo.toml  README.md  dist.sh  env.sh  init.sh  mise.toml  package.json
_tmpl/: Cargo.toml
code_replace/: Cargo.toml  README.md
code_replace/src/: lib.rs
code_replace/tests/: main.rs
i18n/: Cargo.toml  README.md  README.mdt  test.sh
i18n/src/: filetype.rs  lib.rs  main.rs  recv.rs  save.rs  scan.rs  scan_tran.rs  src.rs  state.rs  term.rs  term_changed.rs  tran.rs  tran_yml.rs  yml_lang.rs
proto/: .gitignore  README.md  README.mdt  dist.sh  gen.sh  proto_tran.toml
proto/proto/: tran.proto
proto/rust/proto_tran/: Cargo.toml
proto/rust/proto_tran/src/: lib.rs  proto_tran.rs
remove_code_t/: Cargo.toml  README.md  README.mdt
remove_code_t/src/: lib.rs
remove_code_t/tests/: main.rs
test/.i18n/: src.yml  tran.yml
test/.i18n/hash/: 0.yml  1.yml  term.yml
test/.i18n/term/: zh.yml
test/ar/: i18n.yml
test/bg/: i18n.yml
test/bn/: i18n.yml
test/cs/: i18n.yml
test/da/: i18n.yml
test/de/: i18n.yml
test/el/: i18n.yml
test/en/: i18n.yml
test/es/: i18n.yml
test/et/: i18n.yml
test/fi/: i18n.yml
test/fr/: i18n.yml
test/gu/: i18n.yml
test/hi/: i18n.yml
test/hr/: i18n.yml
test/hu/: i18n.yml
test/id/: i18n.yml
test/it/: i18n.yml
test/iw/: i18n.yml
test/ja/: i18n.yml
test/kn/: i18n.yml
test/ko/: i18n.yml
test/lt/: i18n.yml
test/lv/: i18n.yml
test/ml/: i18n.yml
test/mr/: i18n.yml
test/nl/: i18n.yml
test/no/: i18n.yml
test/pl/: i18n.yml
test/pt/: i18n.yml
test/ro/: i18n.yml
test/ru/: i18n.yml
test/sk/: i18n.yml
test/sl/: i18n.yml
test/sr/: i18n.yml
test/sv/: i18n.yml
test/sw/: i18n.yml
test/ta/: i18n.yml
test/te/: i18n.yml
test/th/: i18n.yml
test/tr/: i18n.yml
test/uk/: i18n.yml
test/ur/: i18n.yml
test/vi/: i18n.yml
test/zh/: i18n.yml  test.md
test/zh-TW/: i18n.yml
tran/: Cargo.toml  README.md  README.mdt
tran/src/: cached.rs  lib.rs  src.rs  term.rs  tran.rs  update.rs
tran_term/: Cargo.toml  README.md
tran_term/src/: lib.rs  yml.rs
tran_term/tests/: main.rs
tran_trait/: Cargo.toml
tran_trait/src/: cache.rs  lib.rs
