[package]
name = "remove_code_t"
version = "0.1.5"
edition = "2024"
license = "MulanPSL-2.0"
description = "remove_code_t"
repository = "https://github.com/i18n-site/tran.git"
homepage = "https://github.com/i18n-site/tran/tree/dev/remove_code_t"
keywords = []

[features]
default = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
htmlize = { version = "1.0.6", features = ["unescape_fast"] }

[dev-dependencies]
aok = "0.1.17"
loginit = "0.1.18"
static_init = "1.0.4"
tracing = "0.1.41"

[dev-dependencies.tokio]
version = "1.46.0"
features = ["macros", "rt", "rt-multi-thread", "time", "sync"]
