[package]
name = "tran"
version = "0.1.30"
edition = "2024"
license = "MulanPSL-2.0"
description = "tran"
repository = "https://github.com/i18n-site/tran.git"
homepage = "https://github.com/i18n-site/tran/tree/dev/tran"
keywords = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []

[dependencies]
aok = "0.1.17"
dashmap = "6.1.0"
defer-lite = "1.0.0"
drop = "0.1.4"
kanal = "0.1.1"
lang = "0.2.9"
logwait = "0.1.3"
range_merge = "0.1.2"
s_ = "0.1.6"
thiserror = "2.0.12"
tracing = "0.1.41"
txtfmt = "0.1.2"
xerr = "0.1.15"

[dependencies.tran_trait]
version = "0.1.13"
# path = "../tran_trait"

[dependencies.cnu]
version = "0.1.16"
features = ["f2j", "j2f"]

[dependencies.proto_tran]
version = "0.1.31"
# path = "../proto/rust/proto_tran"

[dependencies.tokio]
version = "1.44.1"
features = ["macros", "rt", "rt-multi-thread", "time"]

[dependencies.tran_term]
version = "0.1.2"
# path = "../tran_term"

[dependencies.xhash]
version = "0.1.32"
features = ["xhash"]

[dev-dependencies]
aok = "0.1.17"
loginit = "0.1.18"
static_init = "1.0.3"
tracing = "0.1.41"

[dev-dependencies.tokio]
version = "1.44.1"
features = ["macros", "rt", "rt-multi-thread", "time", "sync"]