[package]
name = "tran"
version = "0.1.38"
edition = "2024"
license = "MulanPSL-2.0"
description = "tran"
repository = "https://github.com/i18n-site/tran.git"
homepage = "https://github.com/i18n-site/tran/tree/dev/tran"
keywords = [ ]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [ "--cfg", "docsrs" ]

[features]
default = [ ]

[dependencies]
aok = "0.1.17"
dashmap = "6.1.0"
drop = "0.1.4"
kanal = "0.1.1"
lang = "0.2.9"
logwait = "0.1.3"
range_merge = "0.1.2"
s_ = "0.1.6"
thiserror = "2.0.12"
titlecase = "3.6.0"
tracing = "0.1.41"
txtfmt = "0.1.2"
ub64 = "0.1.14"
xerr = "0.1.15"

[dependencies.htmlize]
version = "1.0.6"
features = [ "unescape_fast" ]

[dependencies.remove_code_t]
version = "0.1.5"
path = "../remove_code_t"

[dependencies.tran_trait]
version = "0.1.27"

[dependencies.proto_tran]
version = "0.1.32"

[dependencies.tokio]
version = "1.45.1"
features = [ "macros", "rt", "rt-multi-thread", "time" ]

[dependencies.tran_term]
version = "0.1.9"
path = "../tran_term"

[dependencies.xhash]
version = "0.1.32"
features = [ "xhash" ]

[dev-dependencies]
aok = "0.1.17"
loginit = "0.1.18"
static_init = "1.0.4"
tracing = "0.1.41"

[dev-dependencies.tokio]
version = "1.45.1"
features = [ "macros", "rt", "rt-multi-thread", "time", "sync" ]