[package]
name = "tran"
version = "0.1.0"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/i18n-site/tran.git"
homepage = "https://github.com/i18n-site/tran/tree/dev/tran"
description = "tran"
keywords = []

[features]
default = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
tran_api = "0.1.16"
txtfmt = "0.1.2"
aok = "0.1.17"

[dev-dependencies]
loginit = "0.1.18"
static_init = "1.0.4"
tracing = "0.1.41"

[dev-dependencies.tokio]
version = "1.46.1"
features = ["macros", "rt", "rt-multi-thread", "time", "sync"]
