[package]
name = "tran_term"
license = "MulanPSL-2.0"
version = "0.1.22"
edition = "2024"
description = "tran_term"
repository = "https://github.com/i18n-site/tran.git"
homepage = "https://github.com/i18n-site/tran/tree/dev/tran_term"
keywords = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
yml = ["dep:saphyr", "dep:lang"]

[dependencies]
aok = "0.1.17"
daachorse = "1.0.0"
indexmap = "2.10.0"
thiserror = "2.0.12"
unicode-segmentation = "1.12.0"
unicode_categories = "0.1.1"

[dependencies.lang]
version = "0.2.9"
optional = true

[dependencies.saphyr]
version = "0.0.6"
optional = true

[dependencies.code_replace]
version = "0.1.8"
path = "../code_replace"

[dev-dependencies]
aok = "0.1.17"
loginit = "0.1.18"
static_init = "1.0.4"
tracing = "0.1.41"

[dev-dependencies.tokio]
version = "1.46.0"
features = ["macros", "rt", "rt-multi-thread", "time", "sync"]